# fixismu-coq

./: .gitignore  FullAbstractionFE.v  FullAbstractionFI.v  FullAbstractionIE.v  Makefile  README.md  TODO.md  _CoqProject  context_summary.txt  fixismu-coq.opam
BacktransFE/: Emulate.v  InjectExtract.v  UValHelpers.v  UValHelpers2.v  UpgradeDowngrade.v
BacktransFI/: Emulate.v  InjectExtract.v  UValHelpers.v  UValHelpers2.v  UpgradeDowngrade.v
BacktransIE/: Emulate.v  InjectExtract.v  UValHelpers.v  UValHelpers2.v  UpgradeDowngrade.v
Common/: Common.v  Relations.v
CompilerFE/: CompilerFE.v
CompilerFI/: CompilerFI.v
CompilerIE/: CompilerIE.v
Db/: Inst.v  Lemmas.v  Spec.v  WellScoping.v
LogRelFE/: LR.v  LRFE.v  LemmasIntro.v  LemmasInversion.v  LemmasLR.v  LemmasPseudoType.v  PseudoTypeFE.v
LogRelFI/: Contraction.v  LR.v  LemmasIntro.v  LemmasInversion.v  LemmasLR.v  LemmasPseudoType.v  PseudoType.v  PseudoTypeFI.v  ValidPTy.v
LogRelIE/: Contraction.v  InstPTy.v  LR.v  LemmasIntro.v  LemmasInversion.v  LemmasLR.v  LemmasPseudoType.v  PseudoType.v  ValidPTy.v
RecTypes/: Contraction.v  InstTy.v  LemmasTypes.v  SpecTypes.v  ValidTy.v
StlcEqui/: CanForm.v  Fix.v  Inst.v  InstAnnot.v  LemmasEvaluation.v  LemmasProgramContext.v  LemmasTyping.v  Size.v  SpecAnnot.v  SpecEquivalent.v  SpecEvaluation.v  SpecSyntax.v  SpecTyping.v  TypeSafety.v
StlcFix/: CanForm.v  Inst.v  LemmasEvaluation.v  LemmasProgramContext.v  LemmasTyping.v  Size.v  SpecAnnot.v  SpecEquivalent.v  SpecEvaluation.v  SpecSyntax.v  SpecTyping.v  StlcOmega.v  TypeSafety.v
StlcIso/: Fix.v  (+14 more)
(+20 files in other folders)
