opam-version: "2.0"
name: "fixismu-coq"
version: "0.1"
synopsis: "Coq mechanization of FAC proofs between various STLCs"
description: """
Coq mechanization of FAC proofs:
- from STLC with fixpoint recursion to STLC with iso-recursive types
- from STLC with fixpoint recursion to STLC with equi-recursive types
- from STLC with iso-recursive types to STLC with equi-recursive types
"""
maintainer: "Dominique Devriese <dominique.devriese@kuleuven.be>"
authors: "Dominique Devriese <dominique.devriese@kuleuven.be>, Eric Mark Martin <ericmarkmartin@gmail.com>, Marco Patrignani <marco.patrignani@unitn.it>"
homepage: "https://github.com/dominiquedevriese/fixismu-coq"
depends: [ "ocaml" "ocamlfind" ]
bug-reports: "https://github.com/dominiquedevriese/fixismu-coq/issues"
build: [make]
